[metadata]
name = ruggedpod-api
version = 0.1.0
author = OCP
summary = Management API to pilot a RuggedPod
url = https://github.com/RuggedPOD/ruggedpod-api

classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    ruggedpod-api

[pytest]
addopts = ruggedpod-api --pep8
pep8maxlinelength = 120
