[metadata]
name = ruggedpod-api
author = OCP
summary = Management API to pilot a RuggedPod
url = https://github.com/RuggedPOD/ruggedpod-api

classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[files]
packages =
    ruggedpod_api

[pytest]
addopts = ruggedpod_api --pep8
pep8maxlinelength = 120
pep8ignore = ruggedpod_api/services/ADCPi/*.py E W
